# kama-util

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/kutil/: _logger.py  date.py  file.py  file_extension.py  file_type.py  logger.py  meta.py  number.py  process.py  pytest.py  pytest_plugin.py  reflection.py  request.py
src/kutil/pytest_fixtures/: __init__.py  file.py
tests/: conftest.py  test_date.py  test_file.py  test_file_extension.py  test_file_type.py  test_logger.py  test_meta.py  test_number.py  test_process.py  test_pytest.py  test_reflection.py  test_request.py
