[project]
name = "kama-util"
version = "0.1.0"
dependencies = [
    "pytz >= 2025.2, < 2026.0",
    "babel >= 2.17.0, < 3.0.0",
    "psutil >= 7.1.3, < 8.0.0",
    "pytest >= 9.0.1, < 10.0.0",
    "pytest-mock >= 3.15.1, < 4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest-cov >= 7.0.0, < 8.0.0"
]

[project.entry-points."pytest11"]
kama_util_fixtures = "kutil.pytest_plugin"

[tool.coverage.run]
omit = ["src/kutil/pytest_plugin.py"]
source = ["kutil"]
disable_warnings = ["module-not-measured"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=kutil --cov-report=term-missing"
